--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -76,42 +76,11 @@
 
 
         <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
+        </div>
 
-          <section id="questions-filter" class="sticky-top">
-            <div class="questions-filter__float sticky-content">
-              <div class="questions-filter__content container">
-                <div class="questions-filter__filters">
-                  <div class="filter-select" id='questions-filter-sort' data-modal-id="questions-filter-sort-modal">
-                    <dl class="filter-select__header" role="button">
-                      <dt class="filter-select__header__name">
-                        정렬<span class="icon icon-pointer-angle-down-dark-sm"></span>
-                      </dt>
-                      <dd class="filter-select__header__value">최신순</dd>
-                    </dl>
-                    <ul class="filter-select__list">
-                        <li class="filter-select__list__entry ">
-                          <a href="/questions?order=popular&amp;page=1">인기순</a>
-                        </li>
-                        <li class="filter-select__list__entry active">
-                          <a href="/questions?order=recent&amp;page=1">최신순</a>
-                        </li>
-                        <li class="filter-select__list__entry ">
-                          <a href="/questions?order=recent_comments&amp;page=1">최근 답변순</a>
-                        </li>
-                    </ul>
-                  </div>
-                </div>
-                <div class="questions-filter__actions">
-                    <a class="set-reply btn btn-normal btn-sm" href="/questions?page=1&amp;reply=not_yet">
-                      답변을 기다리는 질문
-      </a>            <a class="questions-filter__actions__new-question btn btn-priority btn-sm" href="/questions/new">질문하기</a>
-                </div>
-              </div>
-            </div>
-          </section>
+        <p style="text-align: center;">여기에 정렬(최신순 등등) 넣고? 질문하기 / 답변하기 버튼 넣고</p>
 
-
-
+        <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
         </div>
         
         <div id="questions-notice-list" class="container" style="margin-top: 30px;margin-bottom: 30px; font-family: 'Noto Sans KR', sans-serif">
@@ -167,7 +136,7 @@
                   <img src="../image/ddda.gif" style="width: 120px; height: 120px; border-radius: 30%;margin-left: 10px;">
                 </div>
                 <div class="questions-head" style="text-align: center;">
-                  <h2 class="questions-title" style="color: black; " >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
+                  <h2 class="questions-title" style="color: black; line-height: inherit;" >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
                   <p class="questions-content" style="color: black; text-align: start; font-size: 22.5px;">붙박이장 어케 할까요?</p> <!-- 질문내용 -->
                 </div>
               </div>
@@ -225,7 +194,7 @@
                   <img src="../image/wdg.gif" style="width: 120px; height: 120px; border-radius: 30%;margin-left: 10px;">
                 </div>
                 <div class="questions-head" style="text-align: center;">
-                  <h2 class="questions-title" style="color: black; " >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
+                  <h2 class="questions-title" style="color: black; line-height: inherit;" >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
                   <p class="questions-content" style="color: black; text-align: start; font-size: 22.5px;">붙박이장 어케 할까요?</p> <!-- 질문내용 -->
                 </div>
               </div>
@@ -282,7 +251,7 @@
                     <img src="../image/drsd.gif" style="width: 120px; height: 120px; border-radius: 30%;margin-left: 10px;">
                   </div>
                   <div class="questions-head" style="text-align: center;">
-                    <h2 class="questions-title" style="color: black; " >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
+                    <h2 class="questions-title" style="color: black; line-height: inherit; " >어떻게 해야 할까요?</h2> <!-- 질문제목 -->
                     <p class="questions-content" style="color: black; text-align: start; font-size: 22.5px;">붙박이장 어케 할까요?</p> <!-- 질문내용 -->
                   </div>
                 </div>
