--- a/view/commons/footer.html
+++ b/view/commons/footer.html
@@ -37,10 +37,10 @@
                 </div>
                 <div class="col">
                     <h3 style="color: rgb(0,0,0);text-align: right;">COMPANY&nbsp; │&nbsp; AGREEMENT&nbsp; │&nbsp; PRIVACYPOLICY&nbsp; │&nbsp; GUIDE&nbsp;</h3>
-                    <p style="font-size: 13px;text-align: right;color: rgb(98,95,95);">TEL : 070-1234-5678 CONTACT FOR MORE INFOMATION COMPANY: WANZABUSINESS LICENSE: 123-45-12345 ONLINE SELLING LICENSE 2021-SEOUL MAPO-23WABMASTER: HONG GIL DONG OWNER: HONG GIL DONG E.MAIL: GILDONG@NAVER.COMCOPYRIGHT (C)WANZA ALL RIGHTS RESERVED MASTER@WANZA.COM<br><br></p>
+                    <p style="font-size: 13px;text-align: right;color: rgb(98,95,95);">TEL : 070-1234-5678 CONTACT FOR MORE INFOMATION COMPANY: DECOLAB LICENSE: 123-45-12345 ONLINE SELLING LICENSE 2021-SEOUL MAPO-23WABMASTER: HONG GIL DONG OWNER: HONG GIL DONG E.MAIL: GILDONG@NAVER.COMCOPYRIGHT (C)WANZA ALL RIGHTS RESERVED MASTER@WANZA.COM<br><br></p>
                 </div>
             </div>
-            <p class="copyright">Company WANJA © 2021</p>
+            <p class="copyright">Company WANZA © 2021</p>
         </div>
     </footer>
     <script src="../../assets/js/jquery.min.js"></script>
