--- a/view/community/cardDetail.html
+++ b/view/community/cardDetail.html
@@ -556,7 +556,7 @@
                         }
                     },
                     error: function () {
-                        alert('getCardLikeCount() error');
+                        alert('로그인 후에 가능합니다.');
                     }
                 });
             }
@@ -587,11 +587,6 @@
 
 
         
-
-
-
-
-
 
 
     });
