--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../../assets/img/wanza-Icon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" type="text/css" href="../../css/style.css">
     <link rel="stylesheet" type="text/css" href="../../css/question.css">
 
@@ -18,6 +19,51 @@
     .questions-item-link:hover .questions-block{
       text-decoration: underline black;
     }
+
+    .button {
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      float: right;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      transition-duration: 0.4s;
+      cursor: pointer;
+    }
+
+    
+
+    .question-btn1 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid coral;
+    }
+
+    .question-btn1:hover {
+      background-color: coral;
+      color: white;
+    }
+
+    .question-btn2 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid powderblue;
+    }
+
+    .question-btn2:hover {
+      background-color: powderblue;
+      color: white;
+    }
+
+    .w3-dropdown-click{
+      background-color: coral;
+      
+    }
+    
+
     
     </style>
 
@@ -75,13 +121,31 @@
 
 
 
-        <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
+        <!-- <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
+        </div>
+        <p style="text-align: center;">여기에 정렬(최신순 등등) 넣고? 질문하기 / 답변하기 버튼 넣고</p> -->
+
+        <div id = 'questions-filter' class="container" style="margin-top: 30px;margin-bottom: 30px;padding-left: 55px; font-family: 'Noto Sans KR', sans-serif">
+
+          <div class="w3-dropdown-click">
+            <button onclick="filterfunc()" class="w3-button" 
+            style="padding-top: 16px; padding-right: 32px; padding-left: 32px; padding-bottom: 16px; border-radius: 15%;">정렬</button>
+            <div id="Demo" class="w3-dropdown-content w3-bar-block w3-card-4 w3-animate-zoom">
+              <a href="#" class="w3-bar-item w3-button">최신순</a>
+              <a href="#" class="w3-bar-item w3-button">인기순</a>
+              <a href="#" class="w3-bar-item w3-button">최근 답변순</a>
+            </div>
+          </div>
+
+          <button class="button question-btn1" onclick="questionwrite()">질문하기</button>
+
+          <button class="button question-btn2" onclick="questionanswer()">답변을 기다리는 질문</button>
+
+
         </div>
 
-        <p style="text-align: center;">여기에 정렬(최신순 등등) 넣고? 질문하기 / 답변하기 버튼 넣고</p>
-
-        <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
-        </div>
+        <!-- <div style="background-color: coral; height: 0.1px; margin-top: 30px;">
+        </div> -->
         
         <div id="questions-notice-list" class="container" style="margin-top: 30px;margin-bottom: 30px; font-family: 'Noto Sans KR', sans-serif">
           <ul class="questions-notice-list" style="margin:-5px 0; list-style: none; ">
@@ -129,7 +193,7 @@
           <!-- 테스트글1 -->
             
               <div class="questions-item" style="color: black; width: 800px; margin: auto;padding-top: 20px;padding-bottom: 20px;">
-              <a class="questions-item-link" href="questionDetail.html" style="" >
+              <a class="questions-item-link" href="questionDetail.html"  >
                 <div class="questions-block">
 
                 <div class="questions-head-img" style="float: right; ">
@@ -306,6 +370,24 @@
 
 </body>
 
+<script>
+  function filterfunc() {
+    var x = document.getElementById("Demo");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else { 
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }
+
+  function questionwrite(){
+
+  }
+
+  function questionanswer(){
+
+  }
+  </script>
 <script src="../../assets/js/jquery.min.js"></script>
 <script src="../../assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="../../js/includeHTML.js"></script>
