--- a/view/store/orderAf.html
+++ b/view/store/orderAf.html
@@ -12,11 +12,23 @@
     <style>
     .my-hr3 {
         border: 0;
-        height: 3px;
+        height: 2px;
         margin: 3px;
 
-        background: #ccc;
-     }
+        background: #ffc8b5;
+    }
+    body{
+        color: #ff0000;
+    }
+
+ 
+
+    
+
+
+
+
+
     </style>
 <body>
     <header include-html="../commons/header.html"></header>
@@ -37,12 +49,12 @@
         </div>
         <hr class="my-hr3">
 
-        <div class='row' style="margin-top: 20px; margin-bottom: 20px;">
+        <div class='row' style="margin-top: 20px; margin-bottom: 20px; margin-left: 1px;">
             <div class='col-xl-3' >
                 <img src="../../assets/img/KakaoTalk_20210506_154158314.jpg" width="180px" height="180px"  >
             </div>
 
-            <div class='col-xl-4' align='left' style="margin-top: 4%;">
+            <div class='col-xl-4' style="margin-top: 4%;">
                 <div >
                     <table>
                         <tr>
@@ -65,10 +77,49 @@
             </div>
         </div>
         <hr class="my-hr3">
-        <div style="height: 80px; background-color: #e6e6e6; margin-left: 4px; margin-right: 5px;" >
-            <p style="font-size: 20px; text-align: right; padding-top: 2%;">상품 금액 38,900원 + 배송비 2,500원 = <strong>주문금액 41,400원</strong></p> 
+        <div style="height: 80px; background-color: #ffd8ca; margin-left: 4px; margin-right: 5px;" >
+            <p style="font-size: 15px; text-align: right; padding-top: 3%; padding-right: 5%;">상품 금액 38,900원 + 배송비 2,500원 = <strong style="font-size: 20px;">주문금액 41,400원</strong></p> 
         </div>
         <hr class="my-hr3">
+        <div class='row' style="margin-top:100px;">
+            <h3 style="margin-left: 10px;"><strong>배송지</strong></h3>
+        </div>
+        <hr class="my-hr3">
+        <div align='center' style="margin: 5%;">
+            <table style="color: rgb(46, 46, 46); border-spacing:0 10px; border-collapse: separate; ">
+                <colgroup>
+                    <col width='100px'><col width='400px'>
+                </colgroup>
+                <tr>
+                    <th>배송지명</th>
+                    <td>내집</td>
+                </tr>
+                <tr>
+                    <th>주소</th>
+                    <td>뭐 경기도 부천시 오정구 원종동 뭐 어쩌구 끝났네 이러쿵 저러쿵</td>
+                </tr>
+                <tr>
+                    <th>받는분</th>
+                    <td>매미킴</td>
+                </tr>
+                <tr>
+                    <th>연락처</th>
+                    <td>010-0070-0070</td>
+                </tr>
+                <tr>
+                    <th>요청사항</th>
+                    <td>집에 갓난아기가 있으니까 초인종 누르지마시고 현관 앞에 놔주시구요, 부재시 경비실에 맡겨주세요.
+                         아 그리고 놓고 가실 때 현관앞에 있는 재활용 쓰레기좀 버려주셈 </td>
+                </tr>
+            </table>
+        </div>
+
+        <hr class="my-hr3">
+
+        <div align='center' style="margin-top: 30px;">
+            <a href=# style="color: #f4744c;"><h5>홈으로 가기</h5></a>
+
+        </div>
         
 
 
