--- a/view/community/questions.html
+++ b/view/community/questions.html
@@ -73,7 +73,7 @@
 
 
 
-<body>
+<body style="font-family: 'Nanum Gothic', sans-serif;">
     <header include-html="../commons/header.html"></header>
     <nav include-html="../commons/menuComm.html"></nav>
 
@@ -111,6 +111,7 @@
                           <img src="../image/dbg.png" style="width: 22px; height: 22px; margin-left: 5px;">
                         </span>
                         <input type="text" name="query" id="questions-header__form__search" value="" class="form-control" placeholder="궁금한 것을 검색해보세요." autocomplete="off" style="color: coral;"/>
+                        
                       </div>
                     </div>
                   </div>
